ipc/ipdl/test/ipdl/error/Nullable2.ipdl
union Union {
    nullable int;
};

protocol Nullable2 {
child:
    async Msg(Union i);
};
